# ctree

./: .clang-format  .gitignore  CMakeLists.txt
example/: stack.h  turnpike_reconstruction.c
include/ctree/: alg.h  tree.h
include/private/: heap.h  queue.h
include/public/: binary_search_tree.h  binary_tree.h  tree.h  tree_alg.h
src/: CMakeLists.txt  Huffman.c  binary_search_tree.c  binary_tree.c  obst.c  tree.c  tree_print.c
src/alg/: Huffman.c  OBST.c  RT.c
src/core/: alloc.c  avl.c  bst.c
